# deepracerallinone

./: .gitignore  .gitmodules  README.md
.github/workflows/: model-gateway.yml  training-admin.yml
config/: deepracer.connection.example.json  deepracer.connection.schema.json
deepracer-open-source-navigator/: SKILL.md
deepracer-open-source-navigator/agents/: openai.yaml
docs/: DEVELOPMENT_LOG.md  USAGE_AND_DEVELOPMENT.md
model-gateway/: .gitignore  Dockerfile  README.md  pyproject.toml
model-gateway/scripts/: deploy-linux.sh  deploy-windows.ps1  run-linux.sh  run-windows.ps1
model-gateway/src/model_gateway/: __init__.py  app.py  config.py  database.py  diagnostics.py  dispatch.py  maintenance.py  security.py  ssh_delivery.py  storage.py  vehicle.py  worker.py
model-gateway/src/model_gateway/static/: styles.css
model-gateway/src/model_gateway/templates/: admin.html  admin_audit.html  admin_backups.html  admin_dispatch_timeline.html  admin_events.html  admin_health.html  admin_login.html  admin_teams.html  admin_users.html  admin_vehicle_diagnostics.html  admin_vehicles.html  base.html  dashboard.html  login.html  register.html  teams.html  upload.html  upload_success.html
model-gateway/tests/: conftest.py  test_app.py  test_config.py  test_database.py  test_deployment_scripts.py  test_diagnostics.py  test_dispatch.py  test_maintenance.py  test_ssh_delivery.py  test_storage.py  test_vehicle.py  test_worker.py
tests/: test_deepracer_connection.py
tools/: deepracer_connection.py
training-code/: README.md
vehicle-code/: README.md
(+1 files in other folders)
