[project]
name = "deepracer-model-gateway"
version = "0.1.0"
description = "Local LAN model upload and dispatch gateway for AWS DeepRacer competitions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt>=4.0.0,<5.0.0",
    "cryptography>=41.0.0",
    "fastapi>=0.115.0,<0.125.0",
    "httpx>=0.27.0,<0.29.0",
    "jinja2>=3.1.0",
    "paramiko>=3.4.0,<4.0.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.0,<0.34.0",
]

[project.scripts]
model-gateway-maintenance = "model_gateway.maintenance:main"

[project.optional-dependencies]
test = [
    "pytest>=6.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
model_gateway = ["templates/*.html", "static/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
